Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
         const products = [
             {
                 id: 1,
-                name: "Շքեղ Ոսկյա Ժամացույց",
+                name: "Շքեղ Արծաթյա Ժամացույց",
                 description: "Ձեռագործ ոսկյա ժամացույց շվեյցարական մեխանիզմով, սահմանափակ շարք։",
                 price: 1250000,
                 image: "https://images.unsplash.com/photo-1523170335258-f5ed11844a49?ixlib=rb-4.0.3&auto=format&fit=crop&w=1180&q=80",
@@ -768,7 +768,7 @@
             },
             {
                 id: 2,
-                name: "Ադամանդե Մատանի",
+                name: "Ոսկե Վզնոց",
                 description: "Մաքուր ադամանդով զարդարված պլատինե մատանի անհատական դիզայնով։",
                 price: 3500000,
                 image: "https://images.unsplash.com/photo-1599643478518-a784e5dc4c8f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1180&q=80",
@@ -784,7 +784,7 @@
             },
             {
                 id: 4,
-                name: "Դիզայներական Սաթիպ",
+                name: "Դիզայներական Պայուսակ",
                 description: "Ձեռագործ կաշվից պատրաստված սաթիպ հեղինակավոր դիզայների կողմից։",
                 price: 450000,
                 image: "https://images.unsplash.com/photo-1584917865442-de89df76afd3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1180&q=80",
@@ -808,7 +808,7 @@
             },
             {
                 id: 7,
-                name: "Շքեղ Գորգ",
+                name: "Շքեղ Ինտեևյեր",
                 description: "Ձեռագործ մետաքսե գորգ հատուկ դիզայնով, պատրաստված արհեստավորների կողմից։",
                 price: 850000,
                 image: "https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=1180&q=80",
@@ -1337,4 +1337,5 @@
         };
     </script>
 </body>
+
 </html>
