--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
             },
             {
                 id: 7,
-                name: "Շքեղ Ինտեևյեր",
+                name: "Շքեղ Ինտերյեր",
                 description: "Ձեռագործ մետաքսե գորգ հատուկ դիզայնով, պատրաստված արհեստավորների կողմից։",
                 price: 850000,
                 image: "https://images.unsplash.com/photo-1586023492125-27b2c045efd7?ixlib=rb-4.0.3&auto=format&fit=crop&w=1180&q=80",
@@ -1339,3 +1339,4 @@
 </body>
 
 </html>
+
