--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Շքեղ Կատալոգ | Զամբյուղով</title>
+    <title> Կատալոգ | Զամբյուղով</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -592,7 +592,7 @@
             <div class="logo">
                 <i class="fas fa-gem"></i>
             </div>
-            <h1>Շքեղ Կատալոգ</h1>
+            <h1> Կատալոգ</h1>
             <p class="subtitle">Բացառիկ ապրանքներ միայն գրանցված օգտատերերի համար։ Ավելացրեք ապրանքները զամբյուղ և պատվիրեք մեկ կտտոցով։</p>
         </header>
 
@@ -1339,4 +1339,5 @@
 </body>
 
 </html>
+
 
